tests/snapshots/test_move__move_active_to_cancelled.snap
---
source: tests/test_move.rs
expression: value
---
$ govctl work new Cancelled task --active
Created work item: gov/work/<DATE>-cancelled-task.toml
  ID: WI-<DATE>-001
exit: 0

$ govctl work move WI-<DATE>-001 cancelled
Moved <DATE>-cancelled-task.toml to cancelled
exit: 0

$ govctl work list all
[
  {
    "id": "WI-<DATE>-001",
    "status": "cancelled",
    "title": "Cancelled task"
  }
]
exit: 0
