tests/snapshots/test_move__move_active_to_done_with_criteria.snap
---
source: tests/test_move.rs
expression: value
---
$ govctl work edit WI-<DATE>-001 acceptance_criteria[0] --tick done
Marked 'Task done' as done
exit: 0

$ govctl work move WI-<DATE>-001 done
Moved <DATE>-test-task.toml to done
exit: 0

$ govctl work list all
┌───────────────────┬────────┬───────────┐
│ ID                ┆ Status ┆ Title     │
╞═══════════════════╪════════╪═══════════╡
│ WI-<DATE>-001 ┆ done   ┆ Test task │
└───────────────────┴────────┴───────────┘
exit: 0
