tests/snapshots/test_move__move_by_work_item_id.snap
---
source: tests/test_move.rs
expression: value
---
$ govctl work new Task with ID ref
Created work item: gov/work/<DATE>-task-with-id-ref.toml
  ID: WI-<DATE>-001
exit: 0

$ govctl work move WI-<DATE>-001 active
Moved <DATE>-task-with-id-ref.toml to active
exit: 0

$ govctl work list all
[
  {
    "id": "WI-<DATE>-001",
    "status": "active",
    "title": "Task with ID ref"
  }
]
exit: 0
