tests/snapshots/test_move__move_queue_to_active.snap
---
source: tests/test_move.rs
expression: value
---
$ govctl work new Test task
Created work item: gov/work/<DATE>-test-task.toml
  ID: WI-<DATE>-001
exit: 0

$ govctl work list all
[
  {
    "id": "WI-<DATE>-001",
    "status": "queue",
    "title": "Test task"
  }
]
exit: 0

$ govctl work move WI-<DATE>-001 active
error[E0402]: No work item found matching: WI-<DATE>-001 (WI-<DATE>-001)
exit: 1

$ govctl work list all
[
  {
    "id": "WI-<DATE>-001",
    "status": "queue",
    "title": "Test task"
  }
]
exit: 0
