tests/snapshots/test_move__move_queue_to_cancelled.snap
---
source: tests/test_move.rs
expression: value
---
$ govctl work new Skipped task
Created work item: gov/work/<DATE>-skipped-task.toml
  ID: WI-<DATE>-001
exit: 0

$ govctl work move WI-<DATE>-001 cancelled
Moved <DATE>-skipped-task.toml to cancelled
exit: 0

$ govctl work list all
[
  {
    "id": "WI-<DATE>-001",
    "status": "cancelled",
    "title": "Skipped task"
  }
]
exit: 0
