tests/snapshots/test_move__move_sets_completed_date.snap
---
source: tests/test_move.rs
expression: value
---
$ govctl work edit WI-<DATE>-001 acceptance_criteria[0] --tick done
Marked 'Done' as done
exit: 0

$ govctl work show WI-<DATE>-001
# Task to complete

> **ID:** WI-<DATE>-001 | **Status:** active | **Started:** <DATE>

## Description

Describe the work to be done.
What is the goal? What are the acceptance criteria?

## Acceptance Criteria

- ✓ added: Done
exit: 0

$ govctl work move WI-<DATE>-001 done
Moved <DATE>-task-to-complete.toml to done
exit: 0

$ govctl work show WI-<DATE>-001
# Task to complete

> **ID:** WI-<DATE>-001 | **Status:** done | **Started:** <DATE> | **Completed:** <DATE>

## Description

Describe the work to be done.
What is the goal? What are the acceptance criteria?

## Acceptance Criteria

- ✓ added: Done
exit: 0
