tests/snapshots/test_move__move_sets_started_date.snap
---
source: tests/test_move.rs
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl work new Task to start
Created work item: gov/work/<DATE>-task-to-start.toml
  ID: WI-<DATE>-001
exit: 0

$ govctl work show WI-<DATE>-001
# Task to start

> **ID:** WI-<DATE>-001 | **Status:** queue

## Description

Describe the work to be done.
What is the goal? What are the acceptance criteria?
exit: 0

$ govctl work move WI-<DATE>-001 active
Moved <DATE>-task-to-start.toml to active
exit: 0

$ govctl work show WI-<DATE>-001
# Task to start

> **ID:** WI-<DATE>-001 | **Status:** active | **Started:** <DATE>

## Description

Describe the work to be done.
What is the goal? What are the acceptance criteria?
exit: 0
