tests/snapshots/test_move__move_to_done_with_pending_criteria_fails.snap
---
source: tests/test_move.rs
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl work move WI-<DATE>-001 done
error[E0407]: Cannot mark as done: 1 pending acceptance criteria:
  - Task done (WI-<DATE>-001)
exit: 1
