tests/snapshots/test_move__move_to_done_without_criteria_fails.snap
---
source: tests/test_move.rs
expression: value
---
$ govctl work new Test task --active
Created work item: gov/work/<DATE>-test-task.toml
  ID: WI-<DATE>-001
exit: 0

$ govctl work move WI-<DATE>-001 done
error[E0407]: Cannot mark as done: no acceptance criteria defined.
Add criteria with: govctl work edit WI-<DATE>-001 acceptance_criteria --add "fixed: <criterion>" (WI-<DATE>-001)
exit: 1
